Added .cpp just for integration methods.

--- a/calkowanie.vcxproj
+++ b/calkowanie.vcxproj
@@ -142,11 +142,13 @@
   <ItemGroup>
     <ClCompile Include="DisplayResults.cpp" />
     <ClCompile Include="Functions.cpp" />
+    <ClCompile Include="IntegrationMethods.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisplayResults.h" />
     <ClInclude Include="Functions.h" />
+    <ClInclude Include="IntegrationMethods.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
