--- a/calkowanie.vcxproj.filters
+++ b/calkowanie.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IntegrationMethods.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisplayResults.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IntegrationMethods.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
