--- a/calkowanie.vcxproj
+++ b/calkowanie.vcxproj
@@ -150,6 +150,9 @@
     <ClInclude Include="Functions.h" />
     <ClInclude Include="IntegrationMethods.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="output.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
